# GBMSimulator

./: .gitignore  .readthedocs.yml  GBMnotebook.ipynb  README.md  pyproject.toml  requirements.txt
Examples/: GBMnotebook.ipynb
GBMSimulator/: GBMSimulator.py  __init__.py  cli.py
Modules/: GBMSimulator.py  __init__.py  cli.py
docs/: GBMSimulator.rst  conf.py  index.rst  modules.rst  requirements.txt
docs/_build/doctrees/: GBMSimulator.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  GBMSimulator.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/GBMSimulator/: GBMSimulator.html  cli.html
docs/_build/html/_sources/: GBMSimulator.rst.txt  index.rst.txt
